# ffxiv-discord-bot

./: .pre-commit-config.yaml  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt  setup.cfg
bot/: constants.py  roulette.py
bot/models/: roulette.py  xivapi.py
bot/services/: xivapi.py
bot/tests/util/: test_discord.py
bot/util/: discord.py
src/: main.py
src/bot/: constants.py  roulette.py
src/bot/models/: roulette.py  xivapi.py
src/bot/tests/models/: test_roulette.py
